# scapy-cip-enip

./: .gitignore  README.rst  enip_tcp.py  enip_udp.py  pyproject.toml  requirements.txt
scapy_cip_enip/: __init__.py  cip.py  enip_cpf.py  enip_tcp.py  enip_udp.py  plc.py  utils.py
scapy_cip_enip/tests/: test_enip_tcp.py  test_enip_udp.py
