[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "scapy-cip-enip"
version = "0.0.2"
authors = [
  { name="Sai Yerni Akhil Madabattula", email="akhilsai831@gmail.com" },
]
description = "Ethernet/IP dissectors for Scapy"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/saiyerniakhil/scapy-cip-enip"
Issues = "https://github.com/saiyerniakhil/scapy-cip-enip/issues"
